# strife

./: Cargo.toml
crates/discord/: Cargo.toml
crates/discord/src/: lib.rs  queue.rs
src/: config.rs  discord.rs  gui.rs  identify.rs  log.rs  main.rs  render_message.rs  time.rs  tui.rs
src/tui/: terminal.rs
