[package]
edition = "2021"
name = "strife"
version = "0.0.0"

[dependencies]
_tui = { default-features = false, features = ["crossterm"], optional = true, package = "tui", version = "0.19.0" }
bitflags = { default-features = false, version = "1.3.2" }
crossterm = { default-features = false, features = ["bracketed-paste", "event-stream"], optional = true, version = "0.26.0" }
eframe = { default-features = false, features = ["accesskit", "dark-light"], optional = true, version = "0.21.3" }
fst = { default-features = false, features = ["levenshtein"], version = "0.4.7" }
futures-util = { default-features = false, features = ["std"], version = "0.3.26" }
textwrap = { default-features = false, features = ["unicode-linebreak", "unicode-width"], optional = true, version = "0.16.0" }
time = { default-features = false, features = ["formatting", "macros", "parsing", "std"], version = "0.3.19" }
tokio = { default-features = false, features = ["macros", "rt"], version = "1.25.0" }

strife-discord = { path = "crates/discord" }

[features]
default = ["tui"]
gui = ["eframe"]
gui_glow = ["gui", "eframe/glow"]
gui_wgpu = ["gui", "eframe/wgpu"]
tui = ["dep:crossterm", "dep:textwrap", "dep:_tui"]

[profile.dev]
opt-level = 2

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[workspace]
members = [
    "crates/discord"
]
